# ComfyUI-EmbeddingPipelineAnalytics

./: .gitignore  README.md  __init__.py  config.json  nodes.py  pyproject.toml  requirements.txt
core/: __init__.py  analyzers.py  data_store.py
core/pipeline_types/: __init__.py  base.py  hunyuanvideo.py
