[project]
name = "embeddingpipelineanalytics"
description = "this repo is to capture end-to-end data, metadata, and embeddings for ComfyUI workflows, specifically HunyuanVideo to start."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["numpy>=1.21.0", "torch>=2.0.0", "umap-learn>=0.5.3", "scikit-learn>=1.0.0", "matplotlib>=3.4.0", "pandas>=1.3.0"]

[project.urls]
Repository = "https://github.com/fblissjr/ComfyUI-EmbeddingPipelineAnalytics"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-EmbeddingPipelineAnalytics"
Icon = ""
